k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp
  namespace: webapp
  labels:
    app: webapp
spec:
  type: ClusterIP # fronted by Application Gateway (AGIC) / Front Door
  selector:
    app: webapp
  ports:
    - name: http
      port: 80
      targetPort: http
